--- a/template/main.html
+++ b/template/main.html
@@ -17,43 +17,9 @@
 </style>
 </head>
 <body>
-<!-- <div data-role="page" id="swipepage"> -->
-
-<!-- USER MODAL START -->
-{% if username.username %}<div class="modal fade" id="UserModal" tabindex="-1" role="dialog" aria-labelledby="UserModal" aria-hidden="true">
-<div class="modal-dialog"><div class="modal-content"><div class="modal-header">
- <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
- <h4 class="modal-title" id="myModalLabel">Lietotāja profils</h4>
-</div><div class="modal-body">
- <h2><span class="glyphicon glyphicon-user" aria-hidden="true"></span> {{ username.username }}</h2>
- <h4><strong>Reģistrēts:</strong> {{ username.date_joined|localtime|date:"H:i d/m/Y" }}</h4>
- <h4><strong>Pēdējā autorizācija:</strong> {{ username.last_login|localtime|date:"H:i d/m/Y" }}</h4>
- <h4><strong>Pēdējā aktivitāte:</strong> {{ username.u.user_last_visit|localtime|date:"H:i d/m/Y" }}</h4>
- <h4><strong>Darbu saraksta sadaļas tiesības</strong></h4>
- <h5><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;pievienot darbu:</strong> {% if username.u.user_job_add %}Jā{% else %}Nē{% endif %}</h5>
- <h5><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;uzsākt darbu:</strong> {% if username.u.user_job_start %}Jā{% else %}Nē{% endif %}</h5>
- <h5><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;pabeigt darbu:</strong> {% if username.u.user_job_fin %}Jā{% else %}Nē{% endif %}</h5>
- <h5><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;atsākt darbu:</strong> {% if username.u.user_job_restart %}Jā{% else %}Nē{% endif %}</h5>
-</div><div class="modal-footer"> <button type="button" class="btn btn-default" data-dismiss="modal">Aizvērt</button></div></div></div></div>{% endif %}
-<!-- USER MODAL END -->
-
-<div class="container-fluid"><br></div>
-<div class="container-fluid"><div class="row"><div class="col-sm-4 col-lg-4 col-md-4">
-<!-- LEFT MENU BAR START -->
-<nav class="navbar navbar-default navbar-fixed-side">
-<div class="navbar-header">
-<button type="button" class="navbar-toggle sidebar-toggle" data-toggle="collapse" data-target="#sideNavbar">
-    <span>Lapas izvēlne </span>
-    <span class="glyphicon glyphicon-check"></span>
-</button>
-</div>
-<div class="collapse navbar-collapse" id="sideNavbar">
- <ul class="nav navbar-nav navbar-menu flex-column">
+<br><br>
+{{ title }}
+<br><br>
 {% block content %}{% endblock %}
- </ul>
-</div>
-</nav>
-<!-- LEFT MENU BAR END -->
-</div></div></div>
 </body>
 </html>
