--- a/pieraksts/templates/pieraksts.html
+++ b/pieraksts/templates/pieraksts.html
@@ -8,7 +8,7 @@
 <a href="/tren/{{ nodarb_slug }}/"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> Atpakaļ</a><br><br>
 
 <form action="/pieraksts/{{ g_id }}/" method=POST>
-    <div class="col-xl-2 col-lg-4 col-md-4 col-sm-6 col-xs-8  col-offset-5 col-lg-offset-4 col-md-offset-4 col-sm-offset-3 col-xs-offset-2">
+<!--    <div class="col-xl-2 col-lg-4 col-md-4 col-sm-6 col-xs-8  col-offset-5 col-lg-offset-4 col-md-offset-4 col-sm-offset-3 col-xs-offset-2"> -->
 {% csrf_token %}
 	<div class="form-group">
 		<label for"name">Vārds Uzvārds</label>
@@ -22,15 +22,16 @@
                 <label for"tel">kontakta tālrunis</label>
                 <input type="text" name="tel" id="tel" class="form-control" value="{{tel}}">
         </div>
-
+{% if error %}
 <div class="alert alert-danger" role="alert">
 {% if name_error %}<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span><span class="sr-only">Kļūda:</span> {{ nane_error }}<br>{% endif %}
 {% if email_error %}<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span><span class="sr-only">Kļūda:</span> {{ email_error }}<br>{% endif %}
 {% if passw_error %}<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span><span class="sr-only">Kļūda:</span> {{ tel_error }}<br>{% endif %}
 </div>
+{% endif %}
 	<div class="form-group" style="margin-top: 10px;">
 		<input class="btn btn-primary" type="submit" value="Pierakstīties">
 	</div>
-    </div>
+<!--    </div> -->
 </form>
 {% endblock %}
