--- a/grafiks/templates/kli_data.html
+++ b/grafiks/templates/kli_data.html
@@ -3,9 +3,9 @@
 
 {% block content %}
 
-<a href="/grafiks/"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> Atpakaļ</a><br>
+<a href="/reception/"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> Atpakaļ</a><br>
 
-<a href="/grafiks/cancel/{{ g_id }}/">Nodarbību atcēla</a><br>
+<a href="/reception/cancel/{{ g_id }}/">Nodarbību atcēla</a><br>
 
 <div class="container">
 <table class="table table-hover table-striped table-condensed">
