admin week>day added

--- a/pieraksts/templates/nodarb.html
+++ b/pieraksts/templates/nodarb.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 {% for n in nodarbibas %}
-<A HREF="/tren/{{ n.slug }}/">{{ n.nos }}</A></br>
+ <a href="/tren/{{ n.slug }}/">{{ n.nos }}</a><br>
 {% endfor %}
 
 {% endblock %}
