--- a/templates/main.html
+++ b/templates/main.html
@@ -10,7 +10,8 @@
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
  <script src="{% static 'bootstrap-3.3.7-dist/js/bootstrap.js' %}"></script>
 {% block javascript %}{% endblock %}
-<style>{% block style %}{% endblock %}</style>
+<style>
+{% block style %}{% endblock %}</style>
 </head>
 
 <body>
