--- a/pieraksts/templates/nodarb.html
+++ b/pieraksts/templates/nodarb.html
@@ -1,10 +1,39 @@
 {% extends 'main.html' %}
-{% block style %}{% endblock %}
+{% load staticfiles %}
+
+{% block style %}
+span{ position:absolute; width:100%; height:100%; top:0; left: 0; z-index: 0; background-image: url( {% static 'empty.png' %} ); }
+p{ padding:0px; margin:0px; text-align: left; }
+#nod{ position: relative; width: 33%; height:60px; padding: 2px 0px 0px 5px; margin: 1px 1px 0px 0px; border: 1px solid black; background-color:#aaa; float:left; }
+#triangle{ position:absolute; width:15px; height:15px; right:0px; bottom:0px; margin-bottom:1px; margin-right:1px; z-index:1; }
+{% endblock %}
 
 {% block content %}
-
 {% for n in nodarbibas %}
- <a href="/tren/{{ n.slug }}/">{{ n.nos }}</a><br>
+<div class="modal fade" id="Nodarb{{ forloop.counter0 }}" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal-dialog"><div class="modal-content" data-dismiss="modal"><div class="modal-header">
+ <span class="glyphicon glyphicon-comment" aria-hidden="true"></span>
+
+<!-- <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button> -->
+
+</div><div class="modal-body">
+ <h4>{{ n.apraksts }}</h4>
+</div>
+
+<!-- <div class="modal-footer"> -->
+<!-- <button type="button" class="btn btn-default" data-dismiss="modal">Aizvērt</button> -->
+<!-- </div> -->
+
+</div>
+</div></div>
 {% endfor %}
 
+{% for n in nodarbibas %}
+<div id="nod">
+ <a href="/tren/{{ n.slug }}/"><span></span></a>
+ <p>{{ n.nos }}</p>
+ <a href="#" data-toggle="modal" data-target="#Nodarb{{ forloop.counter0 }}">
+<img src="{% static 'blue-triangle.png' %}" id="triangle"></a>
+</div>
+{% endfor %}
 {% endblock %}
