--- a/pieraksts/templates/treneri.html
+++ b/pieraksts/templates/treneri.html
@@ -1,16 +1,37 @@
 {% extends 'main.html' %}
-{% block style %}{% endblock %}
+{% load staticfiles %}
+
+{% block style %}
+span{ position:absolute; width:100%; height:100%; top:0; left: 0; z-index: 0; background-image: url( {% static 'empty.png' %} ); }
+p{ padding:0px; margin:0px; text-align: left; }
+#tren{ position: relative; width: 33%; height:60px; padding: 2px 0px 0px 5px; margin: 1px 1px 0px 0px; border: 1px solid black; background-color:#aaa; float:left; }
+#triangle{ position:absolute; width:15px; height:15px; right:0px; bottom:0px; margin-bottom:1px; margin-right:1px; z-index:1; }
+{% endblock %}
 
 {% block content %}
+<a href="/"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true">Atpakaļ</span></a><br><br>
 
-<a href="/"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> Atpakaļ</a><br><br>
-
-{% if any %}
-<a href="/select/{{ nodarb_slug }}/any/">Jebkurš brīvais</a><br><br>
-{% endif %}
+<table width="100%"><tr>
+<td width="33%" style="border:1px solid black;" valign="top">
 
 {% for t in treneri %}
-<a href="/select/{{ nodarb_slug }}/{{ t.slug }}/">{{ t.vards }}</a><br>
+{% if t == "any" %}
+
+<div id="tren">
+ <a href="/select/{{ nodarb_slug }}/any/"><span></span></a>
+ <p>Jebkurš brīvais</p>
+{% else %}
+ <a href="/select/{{ nodarb_slug }}/{{ t.slug }}/"><span></span></a>
+ <p>{{ t.vards }}</p>
+{% endif%}
+</div>
 {% endfor %}
+
+</td>
+<td colspan=2 style="border:2px solid black;" valign="top">
+{% block select %}{% endblock %}
+</td>
+</tr>
+</table>
 
 {% endblock %}
