--- a/templates/admin.html
+++ b/templates/admin.html
@@ -28,9 +28,9 @@ body { padding-top: 70px; margin: 0; }
 </div>
 <div class="collapse navbar-collapse" id="sideNavbar">
  <ul class="nav navbar-nav navbar-menu flex-column">
-  <li><a href="/reception/"><span class="glyphicon glyphicon-list" aria-hidden="true"></span> &nbsp;šodienas nodarbības</a></li>
-  <li><a href="/reception/plan/"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span> &nbsp;plānotājs</a></li>
-<!--  <li><a href="/arhivs/"><span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span> &nbsp;Video Arhīvs</a></li> -->
+  <li><a href="/reception/"><span class="glyphicon glyphicon-list" aria-hidden="true"></span> &nbsp;Šodienas nodarbības</a></li>
+  <li><a href="/reception/plan/"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span> &nbsp;Nodarbības (admin)</a></li>
+  <li><a href="/reception/logout/"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> &nbsp;Iziet no sistēmas</a></li>
 <!--  <li><a href="/sm_house/"><span class="glyphicon glyphicon-signal" aria-hidden="true"></span> &nbsp;Smart House</a></li> -->
 <!--  <li><a href="/jobs/"><span class="glyphicon glyphicon-wrench" aria-hidden="true"></span> &nbsp;Darbu saraksti</a></li> -->
  </ul>
