--- a/templates/main.html
+++ b/templates/main.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-<div class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-xs-12  col-lg-offset-3 col-md-offset-3 col-sm-offset-2 col-xs-offset-0">
+<div class="col-lg-6 col-md-6 col-sm-8 col-xs-12 col-lg-offset-3 col-md-offset-3 col-sm-offset-2 col-xs-offset-0" style="border:1px solid black">
 
 <h3><img src='{% static 'vfabrika.png' %}'> "Veselības Fabrika" sporta klubs<br>
 <small>Latvija, Rīga, Brīvības gatve 214M, 3. kāpņu telpa, 2. stāvs, LV-1039</small></h3>
