--- a/pieraksts/templates/nodarb.html
+++ b/pieraksts/templates/nodarb.html
@@ -9,6 +9,12 @@ p{ padding:0px; margin:0px; text-align: left; }
 {% endblock %}
 
 {% block content %}
+<div class="row">
+ <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="border:1px solid black">
+  <h2>{{ title }}</h2>
+ </div>
+</div>
+
 {% for n in nodarbibas %}
 <div class="modal fade" id="Nodarb{{ forloop.counter0 }}" tabindex="-1" role="dialog" aria-hidden="true">
 <div class="modal-dialog"><div class="modal-content" data-dismiss="modal"><div class="modal-header">
