--- a/pieraksts/templates/treneri.html
+++ b/pieraksts/templates/treneri.html
@@ -2,36 +2,55 @@
 {% load staticfiles %}
 
 {% block style %}
-span{ position:absolute; width:100%; height:100%; top:0; left: 0; z-index: 0; background-image: url( {% static 'empty.png' %} ); }
+span{ position:absolute; width:100%; height:100%; top:0; left: 0; z-index: 1; background-image: url( {% static 'empty.png' %} ); }
 p{ padding:0px; margin:0px; text-align: left; }
-#tren{ position: relative; width: 33%; height:60px; padding: 2px 0px 0px 5px; margin: 1px 1px 0px 0px; border: 1px solid black; background-color:#aaa; float:left; }
-#triangle{ position:absolute; width:15px; height:15px; right:0px; bottom:0px; margin-bottom:1px; margin-right:1px; z-index:1; }
+
+#tren{
+ position: relative;
+ width: 110%; height:65px;
+ padding: 0px 0px 0px 65px;
+ margin: 1px 0px 0px -10px;
+ border: 1px solid black;
+ background-color:#aaa;
+ float:left; 
+/* display: table; */
+}
+
+#avatar{ position:absolute; width:60px; height:60px; left:2px; bottom:2px; z-index:0; }
 {% endblock %}
 
 {% block content %}
-<a href="/"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true">Atpakaļ</span></a><br><br>
+<div class="row">
+ <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black">
+  <a href="/"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true" style="font-size:2em; margin-top:20px;"></span></a>
+ </div>
+ <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10" style="border:1px solid black">
+  <h2>{{ title }}</h2>
+ </div>
+</div>
 
-<table width="100%"><tr>
-<td width="33%" style="border:1px solid black;" valign="top">
+<div class="row">
+ <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="border:1px solid black">
 
 {% for t in treneri %}
-{% if t == "any" %}
-
 <div id="tren">
+{% if t == "any" %}
  <a href="/select/{{ nodarb_slug }}/any/"><span></span></a>
- <p>Jebkurš brīvais</p>
+ <p><strong>Jebkurš brīvais</strong></p>
+ <img id="avatar" src="{% static 'any.jpg' %}">
 {% else %}
  <a href="/select/{{ nodarb_slug }}/{{ t.slug }}/"><span></span></a>
- <p>{{ t.vards }}</p>
+{% if t.avatar %} <img id="avatar" src="{{ t.avatar.url }}">{% endif %}
+ <p><strong>{{ t.vards }}</strong></p>
+ <p><small>{{ t.apraksts }}</small><p>
 {% endif%}
 </div>
 {% endfor %}
 
-</td>
-<td colspan=2 style="border:2px solid black;" valign="top">
+ </div>
+ <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8" style="border:1px solid black">
 {% block select %}{% endblock %}
-</td>
-</tr>
-</table>
+ </div>
+</div>
 
 {% endblock %}
