overlapse algoritms uzsakts

--- a/pieraksts/templates/nodarb.html
+++ b/pieraksts/templates/nodarb.html
@@ -10,7 +10,7 @@ p{ padding:0px; margin:0px; text-align: left; }
 
 {% block content %}
 <div class="row">
- <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="border:1px solid black">
+ <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
   <h2>{{ title }}</h2>
  </div>
 </div>
