--- a/grafiks/templates/day_data.html
+++ b/grafiks/templates/day_data.html
@@ -1,8 +1,6 @@
-{% extends 'admin.html' %}
-{% block style %}{% endblock %}
+{% extends 'day_header.html' %}
 
 {% block content %}
-
 <div class="container">
 <table class="table table-hover table-striped table-condensed">
 <thead><tr>
