--- a/templates/admin.html
+++ b/templates/admin.html
@@ -42,6 +42,8 @@ body { padding-top: 70px; margin: 0; }
 <div class="col-sm-9 col-lg-10 col-md-9">
 <h2>{{ title }}</h2>
 {% if subtitle %}<h3>{{ subtitle|date:"d/m/Y H:i" }}</h3>{% endif %}
+
+{% block content_header %}{% endblock %}
 {% block content %}{% endblock %}
 {% block logsys %}{% endblock %}
 
