--- a/templates/main.html
+++ b/templates/main.html
@@ -16,7 +16,7 @@
 
 <body>
 <div class="container-fluid">
-<div class="col-lg-6 col-md-6 col-sm-8 col-xs-12 col-lg-offset-3 col-md-offset-3 col-sm-offset-2 col-xs-offset-0" style="border:1px solid black">
+<div class="col-lg-6 col-md-6 col-sm-8 col-xs-12 col-lg-offset-3 col-md-offset-3 col-sm-offset-2 col-xs-offset-0">
 
 <h3><img src='{% static 'vfabrika.png' %}'> "Veselības Fabrika" sporta klubs<br>
 <small>Latvija, Rīga, Brīvības gatve 214M, 3. kāpņu telpa, 2. stāvs, LV-1039</small></h3>
