--- a/pieraksts/templates/treneri.html
+++ b/pieraksts/templates/treneri.html
@@ -11,9 +11,9 @@ p{ padding:0px; margin:0px; text-align: left; }
  padding: 0px 0px 0px 65px;
  margin: 1px 0px 0px -10px;
  border: 1px solid black;
- background-color:#aaa;
- float:left; 
-/* display: table; */
+ background-color:#ccc;
+ float:left;
+ overflow:hidden;
 }
 
 #avatar{ position:absolute; width:60px; height:60px; left:2px; bottom:2px; z-index:0; }
