--- a/grafiks/templates/day_kli_data.html
+++ b/grafiks/templates/day_kli_data.html
@@ -1,5 +1,7 @@
 {% extends 'admin.html' %}
-{% block style %}{% endblock %}
+{% block style %}
+.table-hover tbody tr:hover td, .table-hover tbody tr:hover th {  background-color: #9b9da0; }
+{% endblock %}
 
 {% block content %}
 
