--- a/pieraksts/templates/nodarb.html
+++ b/pieraksts/templates/nodarb.html
@@ -4,7 +4,7 @@
 {% block style %}
 span{ position:absolute; width:100%; height:100%; top:0; left: 0; z-index: 0; background-image: url( {% static 'empty.png' %} ); }
 p{ padding:0px; margin:0px; text-align: left; }
-#nod{ position: relative; width: 33%; height:60px; padding: 2px 0px 0px 5px; margin: 1px 1px 0px 0px; border: 1px solid black; background-color:#aaa; float:left; }
+#nod{ position: relative; width: 33%; height:60px; padding: 2px 0px 0px 5px; margin: 1px 1px 0px 0px; border: 1px solid black; background-color:#ccc; float:left; }
 #triangle{ position:absolute; width:15px; height:15px; right:0px; bottom:0px; margin-bottom:1px; margin-right:1px; z-index:1; }
 {% endblock %}
 
