--- a/pieraksts/templates/treneri.html
+++ b/pieraksts/templates/treneri.html
@@ -7,7 +7,7 @@ p{ padding:0px; margin:0px; text-align: left; }
 
 #tren{
  position: relative;
- width: 110%; height:65px;
+ width: 108%; height:65px;
  padding: 0px 0px 0px 65px;
  margin: 1px 0px 0px -10px;
  border: 1px solid black;
@@ -30,7 +30,7 @@ p{ padding:0px; margin:0px; text-align: left; }
 </div>
 
 <div class="row">
- <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+ <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="border:1px solid black;">
 
 {% for t in treneri %}
 <div id="tren">
@@ -48,8 +48,21 @@ p{ padding:0px; margin:0px; text-align: left; }
 {% endfor %}
 
  </div>
- <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
-{% block select %}{% endblock %}
+ <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8" style="border:1px solid black;">
+  <div class="row">
+    <div class="col-md-1" style="border:1px solid black;"><span class="glyphicon glyphicon-arrow-left" style="text-align:left;" aria-hidden="true"></span></div>
+    <div class="col-md-2" style="border:1px solid black;">P</div>
+    <div class="col-md-2" style="border:1px solid black;">O</div>
+    <div class="col-md-2" style="border:1px solid black;">T</div>
+    <div class="col-md-2" style="border:1px solid black;">C</div>
+    <div class="col-md-2" style="border:1px solid black;">Pk</div>
+    <div class="col-md-1" style="border:1px solid black;"><span class="glyphicon glyphicon-arrow-right" style="text-align:right;"aria-hidden="true"></span></div>
+  </div>
+  <div class="row">
+    <div class="col-md-1" style="border:1px solid black;"></div>
+    <div class="col-md-10" style="border:1px solid black;">{% block select %}{% endblock %}</div>
+    <div class="col-md-1" style="border:1px solid black;"></div>
+  </div>
  </div>
 </div>
 
