CSS header - ok

--- a/pieraksts/templates/nodarb.html
+++ b/pieraksts/templates/nodarb.html
@@ -10,28 +10,21 @@ p{ padding:0px; margin:0px; text-align: left; }
 
 {% block content %}
 <div class="row">
- <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-  <h2>{{ title }}</h2>
+ <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
+ <div class="col-lg-11 col-md-11 col-sm-11 col-xs-11" style="border:1px solid black;">
+  <h2 style="margin-top:5px;">{{ title }}</h2>
  </div>
 </div>
 
+<div class="row">
+ <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="border:1px solid black;">
 {% for n in nodarbibas %}
 <div class="modal fade" id="Nodarb{{ forloop.counter0 }}" tabindex="-1" role="dialog" aria-hidden="true">
 <div class="modal-dialog"><div class="modal-content" data-dismiss="modal"><div class="modal-header">
  <span class="glyphicon glyphicon-comment" aria-hidden="true"></span>
-
-<!-- <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button> -->
-
 </div><div class="modal-body">
  <h4>{{ n.apraksts }}</h4>
-</div>
-
-<!-- <div class="modal-footer"> -->
-<!-- <button type="button" class="btn btn-default" data-dismiss="modal">Aizvērt</button> -->
-<!-- </div> -->
-
-</div>
-</div></div>
+</div></div></div></div>
 {% endfor %}
 
 {% for n in nodarbibas %}
@@ -42,4 +35,6 @@ p{ padding:0px; margin:0px; text-align: left; }
 <img src="{% static 'blue-triangle.png' %}" id="triangle"></a>
 </div>
 {% endfor %}
+ </div>
+</div>
 {% endblock %}
