--- a/pieraksts/templates/treneri.html
+++ b/pieraksts/templates/treneri.html
@@ -21,11 +21,11 @@ p{ padding:0px; margin:0px; text-align: left; }
 
 {% block content %}
 <div class="row">
- <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
-  <a href="/"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true" style="font-size:2em; margin-top:20px;"></span></a>
+ <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1" style="border:1px solid black;">
+  <a href="/"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true" style="font-size:2em; margin-top:5px;"></span></a>
  </div>
- <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
-  <h2>{{ title }}</h2>
+ <div class="col-lg-11 col-md-11 col-sm-11 col-xs-11" style="border:1px solid black;">
+  <h2 style="margin-top:5px;">{{ title }}</h2>
  </div>
 </div>
 
@@ -50,18 +50,19 @@ p{ padding:0px; margin:0px; text-align: left; }
  </div>
  <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8" style="border:1px solid black;">
   <div class="row">
-    <div class="col-md-1" style="border:1px solid black;"><span class="glyphicon glyphicon-arrow-left" style="text-align:left;" aria-hidden="true"></span></div>
-    <div class="col-md-2" style="border:1px solid black;">P</div>
-    <div class="col-md-2" style="border:1px solid black;">O</div>
-    <div class="col-md-2" style="border:1px solid black;">T</div>
-    <div class="col-md-2" style="border:1px solid black;">C</div>
-    <div class="col-md-2" style="border:1px solid black;">Pk</div>
-    <div class="col-md-1" style="border:1px solid black;"><span class="glyphicon glyphicon-arrow-right" style="text-align:right;"aria-hidden="true"></span></div>
+    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6" style="border:1px solid black;"><span class="glyphicon glyphicon-arrow-left" style="text-align:left;" aria-hidden="true"></span></div>
+    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6" style="border:1px solid black;"><span class="glyphicon glyphicon-arrow-right" style="text-align:right;"aria-hidden="true"></span></div>
   </div>
   <div class="row">
-    <div class="col-md-1" style="border:1px solid black;"></div>
-    <div class="col-md-10" style="border:1px solid black;">{% block select %}{% endblock %}</div>
-    <div class="col-md-1" style="border:1px solid black;"></div>
+    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">P</div>
+    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">O</div>
+    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">T</div>
+    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">C</div>
+    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">Pk</div>
+    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">S</div>
+  </div>
+  <div class="row">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="border:1px solid black;">{% block select %}{% endblock %}</div>
   </div>
  </div>
 </div>
