--- a/templates/main.html
+++ b/templates/main.html
@@ -15,16 +15,16 @@
 </head>
 
 <body>
-<div class="container-fluid" style="border:1px solid black;">
+<div class="container-fluid">
 <div class="col-lg-6 col-md-6 col-sm-8 col-xs-12 col-lg-offset-3 col-md-offset-3 col-sm-offset-2 col-xs-offset-0" style="border:1px solid black;">
-
-<h3><img src='{% static 'vfabrika.png' %}'> "Veselības Fabrika" sporta klubs<br>
-<small>Latvija, Rīga, Brīvības gatve 214M, 3. kāpņu telpa, 2. stāvs, LV-1039</small></h3>
+<div class="row">
+ <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="border:1px solid black;">
+  <h3><img src='{% static 'vfabrika.png' %}'> "Veselības Fabrika" sporta klubs<br>
+  <small>Latvija, Rīga, Brīvības gatve 214M, 3. kāpņu telpa, 2. stāvs, LV-1039</small></h3>
+ </div>
+</div>
 
 {% block content %}{% endblock %}
-<div class="row">
- <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="border:1px solid black;"><center>INFO PAR VFABRIKA.LV</center></div>
-</div>
 
 </div>
 </div>
