--- a/templates/main.html
+++ b/templates/main.html
@@ -24,6 +24,22 @@
  </div>
 </div>
 
+<div class="row">
+ <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1" style="border:1px solid black;">
+{% if back == False %}
+  <a href="/"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true" style="font-size:2em; margin-top:5px;"></span></a>
+{% elif back == True %}
+  <a href="/TRENERIS/"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true" style="font-size:2em; margin-top:5px;"></span></a>
+{% endif %}
+ </div>
+ <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6" style="border:1px solid black;">
+  <h2 style="margin-top:5px;">{{ title }}</h2>
+ </div>
+ <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5" style="border:1px solid black;">
+  <h2 style="margin-top:5px;">{{ laiks|date:"H:i d/m/Y" }}</h2>
+ </div>
+</div>
+
 {% block content %}{% endblock %}
 
 </div>
