--- a/pieraksts/templates/nodarb.html
+++ b/pieraksts/templates/nodarb.html
@@ -5,12 +5,11 @@
 span{ position:absolute; width:100%; height:100%; top:0; left: 0; z-index: 0; background-image: url( {% static 'empty.png' %} ); }
 p{ padding:0px; margin:0px; text-align: left; }
 #nod{ position: relative; width: 33%; height:60px; padding: 2px 0px 0px 5px; margin: 1px 1px 0px 0px; border: 1px solid black; background-color:#ccc; float:left; }
-#triangle{ position:absolute; width:15px; height:15px; right:0px; bottom:0px; margin-bottom:1px; margin-right:1px; z-index:1; }
+#triangle{ position:absolute; width:20px; height:20px; right:0px; bottom:0px; /* margin-bottom:1px; margin-right:1px;*/ z-index:1; }
 {% endblock %}
 
 {% block content %}
-<div class="row">
- <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="border:1px solid black;">
+
 {% for n in nodarbibas %}
 <div class="modal fade" id="Nodarb{{ forloop.counter0 }}" tabindex="-1" role="dialog" aria-hidden="true">
 <div class="modal-dialog"><div class="modal-content" data-dismiss="modal"><div class="modal-header">
@@ -20,14 +19,16 @@ p{ padding:0px; margin:0px; text-align: left; }
 </div></div></div></div>
 {% endfor %}
 
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 {% for n in nodarbibas %}
 <div id="nod">
  <a href="/tren/{{ n.slug }}/"><span></span></a>
  <p>{{ n.nos }}</p>
  <a href="#" data-toggle="modal" data-target="#Nodarb{{ forloop.counter0 }}">
-<img src="{% static 'blue-triangle.png' %}" id="triangle"></a>
+<!-- <img src="{% static 'blue-triangle.png' %}" id="triangle"></a> -->
+<!-- <img src="{% static 'triangle.png' %}" id="triangle"></a> -->
+<img src="{% static 'question.png' %}" id="triangle"></a>
 </div>
 {% endfor %}
- </div>
 </div>
 {% endblock %}
