--- a/pieraksts/templates/pieraksts.html
+++ b/pieraksts/templates/pieraksts.html
@@ -21,29 +21,44 @@
 </div></div></div></div>
 
 
-<div class="row" style="border:1px solid black;">
- <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;"></div>
- <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8" style="border:1px solid black;">
-
-<form action="/pieraksts/{{ g_id }}/" method=POST>
+<div class="col-lg-3 col-md-3 col-sm-2 col-xs-1"></div>
+<div class="col-lg-6 col-md-6 col-sm-8 col-xs-10">
 {% if msg %}
-<div class="alert alert-success" role="alert">
- <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
- <strong> {{ msg }}</strong>
-</div>
+ <div class="alert alert-success" role="alert">
+  <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+  <strong> {{ msg }}</strong>
+ </div>
 {% endif %}
 {% if error %}
-<div class="alert alert-danger" role="alert">
- <span class="glyphicon glyphicon-alert" aria-hidden="true"></span>
- <strong> {{ error_msg }}</strong>
-</div>
+ <div class="alert alert-danger" role="alert">
+  <span class="glyphicon glyphicon-alert" aria-hidden="true"></span>
+  <strong> {{ error_msg }}</strong>
+ </div>
 {% endif %}
-{% csrf_token %}{{ form }}
-<div class="form-group" style="margin-top: 10px;">
- <input class="btn btn-primary" type="submit" value="Pierakstīties">
- <button type="button" class="btn btn" data-toggle="modal" data-target="#Noteikumi">Noteikumi</button></a>
-</div>
+<form action="/pieraksts/{{ g_id }}/" method=POST>
+{% csrf_token %}
+ <div class="fieldWrapper">
+  <label for="{{ form.vards.id_for_label }}">Vārds Uzvārds:</label>
+  {{ form.vards.errors }}
+  {{ form.vards }}
+ </div>
+ <div class="fieldWrapper">
+  <label for="{{ form.e_pasts.id_for_label }}">E-pasts:</label>
+  {{ form.e_pasts.errors }}
+  {{ form.e_pasts }}
+ </div>
+ <div class="fieldWrapper">
+  <label for="{{ form.tel.id_for_label }}">Tālrunis:</label>
+  {{ form.tel.errors }}
+  {{ form.tel }}
+ </div>
+ <div class="checkbox">
+  <label style="margin-left:10px;">{{ form.chk }} Piekrist noteikumiem</label><a href="#" data-toggle="modal" data-target="#Noteikumi" style="color:black;"><b> Noteikumi</b></a>
+  {{ form.chk.errors }}
+ </div>
+ <div class="form-group" style="margin-top: 10px;">
+  <input class="btn btn-primary" type="submit" value="Pierakstīties">
+ </div>
 </form>
- <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;"></div>
 </div>
 {% endblock %}
