--- a/pieraksts/templates/success.html
+++ b/pieraksts/templates/success.html
@@ -4,12 +4,14 @@
 
 {% block content %}
 <div class="row">
-  <h2 style="text-align:center; margin-top:5px;">Pieraksts ir sekmīgi izdevies</h2>
+  <h2 style="text-align:center; margin-top:5px;"><b>Pieraksts izdevies sekmīgi</b></h2>
 </div>
-<div class="container">
-<!-- <h3>Nodarbība:<small> {{ pieraksts.nodarbiba }}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ pieraksts.nodarbiba.sakums|date:"d/m/Y H:i" }}</small></h3> -->
- <h4>Vārds Uzvārds:<small> {{ vards }}</small></h4>
- <h4>E-pasts:<small> {{ epasts }}</small></h4>
- <h4>Tālrunis:<small> {{ telefons }}</small></h4>
+<div class="row">
+ <div class="col-lg-offset-4 col-md-offset-4 col-sm-offset-3 col-xs-offset-3">
+  <h4><span class="glyphicon glyphicon-user" aria-hidden="true" style="color:#444;">&nbsp;</span> {{ vards }}</h4>
+  <h4><span class="glyphicon glyphicon-envelope" aria-hidden="true" style="color:#444;">&nbsp;</span> {{ epasts }}</h4>
+  <h4><span class="glyphicon glyphicon-earphone" aria-hidden="true" style="color:#444;">&nbsp;</span> {% if telefons == '' %}Nav norādīts{% else %}{{ telefons }}{% endif %}</h4>
+ </div>
+  <h5><center>Jums ir nosūtīts apstiprinājuma e-pasts ar nodarbības atcelšanas kodu. </center></h5>
 </div>
 {% endblock %}
