--- a/templates/main.html
+++ b/templates/main.html
@@ -11,36 +11,42 @@
  <script src="{% static 'bootstrap-3.3.7-dist/js/bootstrap.js' %}"></script>
 {% block javascript %}{% endblock %}
 <style>
+body { background: black !important; }
 {% block style %}{% endblock %}</style>
 </head>
 
 <body>
-<div class="container-fluid">
-<div class="col-lg-6 col-md-6 col-sm-8 col-xs-12 col-lg-offset-3 col-md-offset-3 col-sm-offset-2 col-xs-offset-0" style="border:1px solid black;">
-<div class="row">
- <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="border:1px solid black;">
-  <h3><img src='{% static 'vfabrika.png' %}'> "Veselības Fabrika" sporta klubs<br>
-  <small>Latvija, Rīga, Brīvības gatve 214M, 3. kāpņu telpa, 2. stāvs, LV-1039</small></h3>
+<div class="container-fluid" style="margin-top:8px;">
+<div class="col-lg-6 col-md-6 col-sm-8 col-xs-12 col-lg-offset-3 col-md-offset-3 col-sm-offset-2 col-xs-offset-0">
+
+<!-- <div class="row" style="background-color:#ccc;"> -->
+<div class="row" style="background-color:red;">
+ <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+  <center><img src='{% static 'vfabrika.png' %}' style="padding-top:5px;"><h3 style="margin-top:5px; margin-bottom:0px;"> "Veselības Fabrika" sporta klubs</center>
+  <center><small>Latvija, Rīga, Brīvības gatve 214M, 3. kāpņu telpa, 2. stāvs, LV-1039</small></center></h3>
  </div>
 </div>
 
-<div class="row">
- <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1" style="border:1px solid black;">
+<!-- <div class="row" style="background-color:#d8d8d8;"> -->
+<div class="row" style="background-color:#888;">
+ <div class="col-lg-1 col-md-1 col-sm-1 col-xs-2" style="padding-left:5px; text-align:center;">
 {% if back == False %}
-  <a href="/"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true" style="font-size:2em; margin-top:5px;"></span></a>
+  <a href="/"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true" style="font-size:2em; color:#444; margin-top:7px;"></span></a>
 {% elif back == True %}
-  <a href="/TRENERIS/"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true" style="font-size:2em; margin-top:5px;"></span></a>
+  <a href="/tren/{{ nodarb_slug }}/"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true" style="font-size:2em; color:#444; margin-top:7px;"></span></a>
 {% endif %}
  </div>
- <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6" style="border:1px solid black;">
-  <h2 style="margin-top:5px;">{{ title }}</h2>
- </div>
- <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5" style="border:1px solid black;">
-  <h2 style="margin-top:5px;">{{ laiks|date:"H:i d/m/Y" }}</h2>
+ <div class="col-lg-11 col-md-11 col-sm-11 col-xs-10">
+  <h2 style="margin-top:5px; margin-bottom:5px;">{{ title }}
+{% if time %}&nbsp;&nbsp;&nbsp;&nbsp;<span class="glyphicon glyphicon-calendar" aria-hidden="true" style="font-size:0.7em; color:#444; margin-top:6px;"></span> {{ laiks|date:"d/m/Y" }}
+&nbsp;&nbsp;<span class="glyphicon glyphicon-time" aria-hidden="true" style="font-size:0.7em; color:#444; margin-top:6px;"></span> {{ laiks|date:"H:i" }}{% endif %}</h2>
  </div>
 </div>
 
-{% block content %}{% endblock %}
+<!-- <div class="row" style="background-color:#e8e8e8; padding-top:5px; padding-bottom:8px;"> -->
+<div class="row" style="background-color:#aaa; padding-top:5px; padding-bottom:8px;">
+ {% block content %}{% endblock %}
+</div>
 
 </div>
 </div>
