--- a/pieraksts/templates/select.html
+++ b/pieraksts/templates/select.html
@@ -1,34 +1,60 @@
 {% extends 'treneri.html' %}
 
 {% block select %}
+<div id="myCarousel" class="carousel slide" data-interval="false" data-wrap="false">
+ <div class="carousel-inner" role="listbox">
+  <div class="item active">
 
-<div class="row">
- <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">
-DIENA
-
+   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">27/03 P</div>
+   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">28/03 O</div>
+   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">29/03 T</div>
+   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">30/03 C</div>
+   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">31/03 Pk</div>
+   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">01/04 S</div>
+  </div>
+  <div class="item">
+   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">02/04 Sv</div>
+   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">03/04 P</div>
+   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">04/04 O</div>
+   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">05/04 T</div>
+   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">06/04 C</div>
+   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">07/04 Pk</div>
+  </div>
+  <div class="item">
+   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">08/04 S</div>
+   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">09/04 Sv</div>
+   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">10/04 P</div>
+   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">11/04 O</div>
+   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">12/04 T</div>
+   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">13/04 C</div>
+  </div>
+  <div class="item">
+   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">14/04 P</div>
+   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">15/04 S</div>
+   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">16/04 Sv</div>
+   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">17/04 P</div>
+   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">18/04 O</div>
+   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">19/04 T</div>
+  </div>
+  <div class="item">
+   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">20/04 C</div>
+   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">21/04 Pk</div>
+   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">22/04 S</div>
+   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">23/04 Sv</div>
+   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2"></div>
+   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2"></div>
+  </div>
  </div>
- <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">
-DIENA
-
- </div>
- <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">
-DIENA
-
- </div>
- <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">
-DIENA
-
- </div>
- <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">
-DIENA
-
- </div>
- <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2" style="border:1px solid black;">
-DIENA
-
- </div>
+ <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+  <span class="glyphicon glyphicon-arrow-left" aria-hidden="true" style="margin-top:21px;"></span>
+  <span class="sr-only">Previous</span>
+ </a>
+ <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+  <span class="glyphicon glyphicon-arrow-right" aria-hidden="true" style="margin-top:21px;"></span>
+  <span class="sr-only">Next</span>
+ </a>
 </div>
-
+<div class="row" style="padding-top:22px;"></div>
 
 {% for g in grafiks %}
 <a href="/pieraksts/{{ g.id }}/">{{ g }} | {{ g.sakums|date:"H:i d/m/Y" }} | {{ g.treneris }} | {{ g.telpa }} | {{ g.vietas }}</a><br>
