--- a/templates/main.html
+++ b/templates/main.html
@@ -17,7 +17,7 @@ body { background: black !important; }
 
 <body>
 <div class="container-fluid" style="margin-top:8px;">
-<div class="col-lg-6 col-md-6 col-sm-8 col-xs-12 col-lg-offset-3 col-md-offset-3 col-sm-offset-2 col-xs-offset-0">
+<div class="col-lg-6 col-md-6 col-sm-8 col-xs-12 col-lg-offset-3 col-md-offset-3 col-sm-offset-2">
 
 <!-- <div class="row" style="background-color:#ccc;"> -->
 <div class="row" style="background-color:red;">
@@ -43,8 +43,7 @@ body { background: black !important; }
  </div>
 </div>
 
-<!-- <div class="row" style="background-color:#e8e8e8; padding-top:5px; padding-bottom:8px;"> -->
-<div class="row" style="background-color:#aaa; padding-top:5px; padding-bottom:8px;">
+<div class="row" style="background-color:#aaa; padding-top:5px; padding-bottom:8px; min-height:200px !important;">
  {% block content %}{% endblock %}
 </div>
 
