--- a/pieraksts/templates/cancel.html
+++ b/pieraksts/templates/cancel.html
@@ -2,16 +2,19 @@
 {% block style %}{% endblock %}
 
 {% block content %}
-
-<h2>Vai tiešām vēlaties atcelt pierakstu uz:</h2>
-<h3>{{ data.nodarbiba.sakums|date:"d/m/Y H:i" }} | {{ data.nodarbiba }}</h3>
-<h3>Treneris: {{ data.nodarbiba.treneris }}</h3>
-
-<!-- <a href="/tren/{{ nodarb_slug }}/"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> Atpaka  </a><br><br> -->
-
-<div class="form-group" style="margin-top: 10px;">
-     <a href="/atcelts/{{ id }}/"><input class="btn btn-primary" value="Jā"></a>
-     <input class="btn btn-primary" value="Nē">
+<div class="row">
+  <h2 style="text-align:center; margin-top:5px;"><b>Vai tiešām vēlaties atcelt pierakstu uz:</b></h2>
+</div>
+<div class="row">
+ <div class="col-lg-offset-4 col-md-offset-4 col-sm-offset-2 col-xs-offset-1">
+  <h4><span class="glyphicon glyphicon-user" aria-hidden="true" style="color:#444;">&nbsp;</span> {{ data.nodarbiba }}</h4>
+  <h4><span class="glyphicon glyphicon-calendar" aria-hidden="true" style="color:#444;">&nbsp;</span> {{ data.nodarbiba.sakums|date:"d/m/Y" }}</h4>
+  <h4><span class="glyphicon glyphicon-time" aria-hidden="true" style="color:#444;">&nbsp;</span> {{ data.nodarbiba.sakums|date:"H:i" }}</h4>
+ </div>
+ <div class="form-group" style="margin-top: 10px;"><center>
+  <a href="/atcelts/{{ id }}/"><input class="btn btn-danger" value="Jā"></a>
+  <a href="/"><input class="btn btn-default" value="Nē"></a></center>
+ </div>
 </div>
 {% endblock %}
 
