--- a/pieraksts/templates/canceled.html
+++ b/pieraksts/templates/canceled.html
@@ -2,12 +2,18 @@
 {% block style %}{% endblock %}
 
 {% block content %}
-
-<h2>Nodarbība atcelta</h2>
-<h3>{{ data.nodarbiba.sakums|date:"d/m/Y H:i" }} | {{ data.nodarbiba }}</h3>
-<h3>Treneris: {{ data.nodarbiba.treneris }}</h3>
-
-<a href="/">Uz sākumu</a>
-
+<div class="row">
+  <h2 style="text-align:center; margin-top:5px;"><b>Nodarbība atcelta</b></h2>
+</div>
+<div class="row">
+ <div class="col-lg-offset-4 col-md-offset-4 col-sm-offset-2 col-xs-offset-1">
+  <h4><span class="glyphicon glyphicon-user" aria-hidden="true" style="color:#444;">&nbsp;</span> {{ data.nodarbiba }}</h4>
+  <h4><span class="glyphicon glyphicon-calendar" aria-hidden="true" style="color:#444;">&nbsp;</span> {{ data.nodarbiba.sakums|date:"d/m/Y" }}</h4>
+  <h4><span class="glyphicon glyphicon-time" aria-hidden="true" style="color:#444;">&nbsp;</span> {{ data.nodarbiba.sakums|date:"H:i" }}</h4>
+ </div>
+ <div class="form-group" style="margin-top: 10px;">
+  <center><a href="/"><input class="btn btn-default" value="Uz sākumu"></a></center>
+ </div>
+</div>
 {% endblock %}
 
