--- a/templates/admin.html
+++ b/templates/admin.html
@@ -6,7 +6,7 @@
  <meta charset="UTF-8">
  <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link rel="stylesheet" type="text/css" href="{% static 'bootstrap-3.3.7-dist/css/bootstrap.css' %}">
+ <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}">
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
  <script src="{% static 'bootstrap-3.3.7-dist/js/bootstrap.js' %}"></script>
 {% block javascript %}{% endblock %}
