--- a/templates/main.html
+++ b/templates/main.html
@@ -6,9 +6,9 @@
  <meta charset="UTF-8">
  <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link rel="stylesheet" type="text/css" href="{% static 'bootstrap-3.3.7-dist/css/bootstrap.css' %}">
+ <link rel="stylesheet" type="text/css" href="{% static 'bootstrap/css/bootstrap.css' %}">
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
- <script src="{% static 'bootstrap-3.3.7-dist/js/bootstrap.js' %}"></script>
+ <script src="{% static 'bootstrap/js/bootstrap.js' %}"></script>
 {% block javascript %}{% endblock %}
 <style>
 body { background: black !important; }
@@ -17,7 +17,7 @@ body { background: black !important; }
 
 <body>
 <div class="container-fluid" style="margin-top:8px;">
-<div class="col-lg-6 col-md-6 col-sm-8 col-xs-12 col-lg-offset-3 col-md-offset-3 col-sm-offset-2">
+<div class="col-lg-6 col-md-8 col-sm-8 col-xs-12 col-lg-offset-3 col-md-offset-2 col-sm-offset-2">
 
 <!-- <div class="row" style="background-color:#ccc;"> -->
 <div class="row" style="background-color:red;">
