--- a/pieraksts/templates/treneri.html
+++ b/pieraksts/templates/treneri.html
@@ -5,10 +5,11 @@
 span{ position:absolute; width:100%; height:100%; top:0; left: 0; z-index: 1; background-image: url( {% static 'empty.png' %} ); }
 p{ padding:0px; margin:0px; text-align: left; }
 #tren{ position: relative; width: 100%; height:65px; padding: 0px 0px 0px 65px; margin: 1px 0px 0px 0px; border: 1px solid black; background-color:#ccc; float:left; overflow:hidden; }
-
-#nodarb{ position: relative; width: 100%; height:60px; padding: 0px 0px 0px 0px; margin: 0px 0px 0px 0px; border: 1px solid black; background-color:#ddd; float:left; overflow:hidden; }
-
 #avatar{ position:absolute; width:60px; height:60px; left:2px; bottom:2px; z-index:0; }
+
+#datums{ position: relative; height:65px; padding: 2px 2px 2px 2px; margin: 1px 1px 1px 1px; border: 1px solid black; background-color:#888; overflow:hidden; border-radius: 5px; text-align: center;}
+#nodarb_t{ position: relative; height:40px; padding: 2px 2px 2px 2px; margin: 1px 1px 1px 1px; border: 1px solid black; background-color:#ddd; overflow:hidden; border-radius: 5px; text-align: center;}
+#nodarb_p{ position: relative; height:40px; padding: 2px 2px 2px 2px; margin: 1px 1px 1px 1px; border: 1px solid black; background-color:red; overflow:hidden; border-radius: 5px; text-align: center;}
 {% endblock %}
 
 {% block content %}
